--- a/src/styles/ControlPanel.css
+++ b/src/styles/ControlPanel.css
@@ -15,6 +15,7 @@
   width: 12%;
   height: 24%;
   position: absolute;
+  -webkit-tap-highlight-color: transparent;
 }
 
 #dispatchBtn1 {
@@ -35,6 +36,7 @@
   width: 12%;
   height: 24%;
   position: absolute;
+  -webkit-tap-highlight-color: transparent;
 }
 
 #gatesSwitch {
@@ -62,6 +64,7 @@
   position: absolute;
   top: 5%;
   right: 2.5%;
+  -webkit-tap-highlight-color: transparent;
 }
 
 /* -------- text ----------*/
