--- a/src/styles/ControlPanel.css
+++ b/src/styles/ControlPanel.css
@@ -7,6 +7,11 @@
   position: relative;
 }
 
+.controlpanelRoute h1,
+.controlpanelRoute p {
+  user-select: none;
+}
+
 .dispatchBtn {
   background: url("../assets/greenBtn_off.png");
   background-position: center;
