--- a/src/client/styles/ControlPanel.css
+++ b/src/client/styles/ControlPanel.css
@@ -45,7 +45,7 @@
   -webkit-tap-highlight-color: transparent;
   cursor: pointer;
   left: 5%;
-  top: 15%;
+  top: 20%;
 }
 
 .switch {
@@ -106,6 +106,12 @@
   font-size: 1.3vw;
   text-align: center;
   transform: translate(0, -200%);
+}
+
+.key h1 {
+  font-size: 1.3vw;
+  text-align: center;
+  transform: translate(0, -180%);
 }
 
 .subSigns {
